Fix menu z-index issue in combination with tinymce full screen mode

--- a/core/menu/css/menu.less
+++ b/core/menu/css/menu.less
@@ -48,8 +48,8 @@ background-color: #FFFF00;
 // menu_wrapper
 	.menu_wrapper {
 		// z-index: 1002;
-		// z-index: 2;
-		z-index: 1;
+		z-index: 2;
+		// z-index: 1;
 		position: fixed;
 		top: 0px;
 		left:0px;
